--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alabaster==0.7.10
+argh==0.26.2
 Babel==2.5.1
 certifi==2017.7.27.1
 chardet==3.0.4
@@ -8,14 +9,21 @@ docutils==0.14
 idna==2.6
 imagesize==0.7.1
 Jinja2==2.9.6
+livereload==2.5.1
 MarkupSafe==1.0
+pathtools==0.1.2
 pockets==0.5.1
+port-for==0.3.1
 Pygments==2.2.0
 pytz==2017.2
+PyYAML==3.12
 requests==2.18.4
 six==1.11.0
 snowballstemmer==1.2.1
 Sphinx==1.6.4
+sphinx-autobuild==0.7.1
 sphinxcontrib-napoleon==0.6.1
 sphinxcontrib-websupport==1.0.1
+tornado==4.5.2
 urllib3==1.22
+watchdog==0.8.3
