--- a/requirements.txt
+++ b/requirements.txt
@@ -3,25 +3,39 @@ argh==0.26.2
 Babel==2.5.1
 certifi==2017.7.27.1
 chardet==3.0.4
+CommonMark==0.5.4
 Django==1.11.5
 django-braces==1.11.0
+django-simple-menu==1.2.1
 docutils==0.14
 idna==2.6
 imagesize==0.7.1
 Jinja2==2.9.6
 livereload==2.5.1
 MarkupSafe==1.0
+olefile==0.44
 pathtools==0.1.2
+pdfrw==0.4
+Pillow==4.3.0
 pockets==0.5.1
 port-for==0.3.1
+purepng==0.2.0
 Pygments==2.2.0
 pytz==2017.2
 PyYAML==3.12
+recommonmark==0.4.0
+reportlab==3.4.0
 requests==2.18.4
+rinoh-typeface-dejavuserif==0.1.1
+rinoh-typeface-texgyrecursor==0.1.1
+rinoh-typeface-texgyreheros==0.1.1
+rinoh-typeface-texgyrepagella==0.1.1
+rinohtype==0.3.1
 six==1.11.0
 snowballstemmer==1.2.1
 Sphinx==1.6.4
 sphinx-autobuild==0.7.1
+sphinx-rtd-theme==0.2.4
 sphinxcontrib-napoleon==0.6.1
 sphinxcontrib-websupport==1.0.1
 tornado==4.5.2
