--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ argh==0.26.2
 Babel==2.5.1
 certifi==2017.7.27.1
 chardet==3.0.4
+colorama==0.3.9
 CommonMark==0.5.4
 Django==1.11.5
 django-braces==1.11.0
 django-simple-menu==1.2.1
+django-widget-tweaks==1.4.1
 docutils==0.14
 idna==2.6
 imagesize==0.7.1
